# nasOS

./: .gitignore  BUILD_PLAN.md  LICENSE  Makefile  README.md  build-demo.sh  docker-compose.dev.yml  package-lock.json
.claude/: launch.json
backend/: Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  backup.py  docker.py  extras.py  file_ops.py  files.py  logs.py  network.py  preferences.py  security.py  shares.py  storage.py  system.py  update.py  users.py  wifi.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  backup.py  file_operation.py  share.py  user_preferences.py
backend/app/services/: backup_service.py  disk_service.py  docker_service.py  file_ops.py  log_service.py  network_service.py  security_service.py  share_service.py  system_extras_service.py  update_service.py  user_service.py
backend/app/ws/: file_ops.py  metrics.py  terminal.py  theme_sync.py
backend/tests/: conftest.py  test_auth.py  test_files.py  test_shares.py  test_system.py
docs/: capture-screenshots.mjs
electron/: main.js  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
image-builder/: build.sh  config  resize-image.sh
scripts/: build-ota.sh
system/configs/: exports.template  smb.conf.template  sudoers-nasos  wpa_supplicant.conf.template
system/scripts/: apply-update.sh  disk-hotplug.sh  first-boot.sh  readonly-root.sh  setup-data-partition.sh  share-helper.sh
(+94 files in other folders)
